fix placeholder text alignment in chrome

--- a/styles/blocks/f-text-input.css
+++ b/styles/blocks/f-text-input.css
@@ -94,9 +94,12 @@ f-text-input_multiline, .f-text-input__text-field {
 }
 .f-text-input__text-field {
 	display: block;
-
 }
-.f-text-input_multiline {	}
+.f-text-input__text-field::placeholder {
+	padding-left: .2rem; /*TODO: only works in chrome */
+}
+
+.f-text-input_multiline,
 .f-text-input_disable * {
 	cursor: not-allowed;
 }
